--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 5px;
 }
 
 .container {
     width: 960px;
     height: 960px;
-    border: 2px solid black;
+    padding: 1px;
 
     display: flex;
     gap: 2px;
